Added Java 21 Support as default